--- a/index.html
+++ b/index.html
@@ -156,6 +156,25 @@
             <img src="images\logo_CL.png" alt="Logo Centrale Lille" />
           </div>
         </div>
+        <div class="project">
+          <p class="project-title">Dart'O'Matic : Système de gestion automatique d'une partie de fléchette</p>
+          <div class="media">
+            <iframe src="https://www.youtube.com/embed/i5ayhuvZMgI"></iframe>
+          </div>
+          <div class="project-content">
+            <p class="project-description">
+              TODO
+            </p>
+            <a class="button button-blue" download href="documents/Rapport_DartOmatic.pdf" target="_blank">
+              <img src="images/logo_pdf.png" alt="logo document pdf" class="icon">
+              Lire le rapport
+            </a>
+            <a class="button button-blue" href="https://github.com/ThibaudPiccinali/Dart-O-Matic" target="_blank">
+              <img src="images/logo_github.png" alt="logo GitHub" class="icon">
+              Voir sur GitHub
+            </a>
+          </div>
+      </div>
       </div>
       <div class="formation">
         <div class="formation-content">
@@ -176,7 +195,7 @@
         </div>
         <div class="project">
             <p class="project-title">Comment utiliser l'IA pour analyser des tableaux ?</p>
-            <div class="project-media">
+            <div class="media">
               <img src="images/od_focal_point.png" alt="Aperçu du projet" />
             </div>
             <div class="project-content">
@@ -192,7 +211,7 @@
                 Voir sur GitHub
               </a>
             </div>
-          </div>
+        </div>
       </div>
     </section>
 
