--- a/index.html
+++ b/index.html
@@ -175,6 +175,18 @@
             </a>
           </div>
       </div>
+      <div class="project">
+        <p class="project-title">Commande d'une flotte de robots gérant la logistique d'un entrepôt</p>
+        <div class="project-content">
+          <p class="project-description">
+            TODO
+          </p>
+          <a class="button button-blue" href="https://github.com/Zakurama/projet_entrepot" target="_blank">
+            <img src="images/logo_github.png" alt="logo GitHub" class="icon">
+            Voir sur GitHub
+          </a>
+        </div>
+    </div>
       </div>
       <div class="formation">
         <div class="formation-content">
