rajout station météo

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="project">
           <p class="project-title">Dart'O'Matic : Système de gestion automatique d'une partie de fléchette</p>
           <div class="media">
-            <iframe src="https://www.youtube.com/embed/i5ayhuvZMgI"></iframe>
+            <iframe src="https://www.youtube.com/embed/i5ayhuvZMgI" alt="Aperçu du projet Dart'O'Matic"></iframe>
           </div>
           <div class="project-content">
             <p class="project-description">
@@ -187,6 +187,21 @@
           </a>
         </div>
     </div>
+    <div class="project">
+      <p class="project-title">Station météo</p>
+      <div class="media">
+        <img src="images/station_meteo.png" alt="Aperçu du projet station météo" />
+      </div>
+      <div class="project-content">
+        <p class="project-description">
+          TODO
+        </p>
+        <a class="button button-blue" href="https://github.com/Zakurama/station_meteo/tree/projet_commun" target="_blank">
+          <img src="images/logo_github.png" alt="logo GitHub" class="icon">
+          Voir sur GitHub
+        </a>
+      </div>
+  </div>
       </div>
       <div class="formation">
         <div class="formation-content">
@@ -208,7 +223,7 @@
         <div class="project">
             <p class="project-title">Comment utiliser l'IA pour analyser des tableaux ?</p>
             <div class="media">
-              <img src="images/od_focal_point.png" alt="Aperçu du projet" />
+              <img src="images/od_focal_point.png" alt="Aperçu du projet IA dans les tableaux" />
             </div>
             <div class="project-content">
               <p class="project-description">
