--- a/index.html
+++ b/index.html
@@ -130,11 +130,6 @@
 
     <section>
       <h2>Expériences Professionnelles</h2>
-      <p><strong>Projet étudiant – Station connectée</strong> (2025)</p>
-      <p>Création d’une station IoT avec capteurs, affichage et communication réseau.</p>
-
-      <p><strong>Stage – Développeur embarqué</strong> (2024)</p>
-      <p>Développement sur microcontrôleur, implémentation de protocoles de communication.</p>
     </section>
 
     <section>
@@ -156,52 +151,56 @@
             <img src="images\logo_CL.png" alt="Logo Centrale Lille" />
           </div>
         </div>
+        <details>
+          <summary>Projets réalisés</summary>
+          <div class="project">
+            <p class="project-title">Dart'O'Matic : Système de gestion automatique d'une partie de fléchette</p>
+            <div class="media">
+              <iframe src="https://www.youtube.com/embed/i5ayhuvZMgI" alt="Aperçu du projet Dart'O'Matic"></iframe>
+            </div>
+            <div class="project-content">
+              <p class="project-description">
+                TODO
+              </p>
+              <a class="button button-blue" download href="documents/Rapport_DartOmatic.pdf" target="_blank">
+                <img src="images/logo_pdf.png" alt="logo document pdf" class="icon">
+                Lire le rapport
+              </a>
+              <a class="button button-blue" href="https://github.com/ThibaudPiccinali/Dart-O-Matic" target="_blank">
+                <img src="images/logo_github.png" alt="logo GitHub" class="icon">
+                Voir sur GitHub
+              </a>
+            </div>
+        </div>
         <div class="project">
-          <p class="project-title">Dart'O'Matic : Système de gestion automatique d'une partie de fléchette</p>
-          <div class="media">
-            <iframe src="https://www.youtube.com/embed/i5ayhuvZMgI" alt="Aperçu du projet Dart'O'Matic"></iframe>
-          </div>
+          <p class="project-title">Commande d'une flotte de robots gérant la logistique d'un entrepôt</p>
           <div class="project-content">
             <p class="project-description">
               TODO
             </p>
-            <a class="button button-blue" download href="documents/Rapport_DartOmatic.pdf" target="_blank">
-              <img src="images/logo_pdf.png" alt="logo document pdf" class="icon">
-              Lire le rapport
-            </a>
-            <a class="button button-blue" href="https://github.com/ThibaudPiccinali/Dart-O-Matic" target="_blank">
+            <a class="button button-blue" href="https://github.com/Zakurama/projet_entrepot" target="_blank">
               <img src="images/logo_github.png" alt="logo GitHub" class="icon">
               Voir sur GitHub
             </a>
           </div>
       </div>
       <div class="project">
-        <p class="project-title">Commande d'une flotte de robots gérant la logistique d'un entrepôt</p>
+        <p class="project-title">Station météo</p>
+        <div class="media">
+          <img src="images/station_meteo.png" alt="Aperçu du projet station météo" />
+        </div>
         <div class="project-content">
           <p class="project-description">
             TODO
           </p>
-          <a class="button button-blue" href="https://github.com/Zakurama/projet_entrepot" target="_blank">
+          <a class="button button-blue" href="https://github.com/Zakurama/station_meteo/tree/projet_commun" target="_blank">
             <img src="images/logo_github.png" alt="logo GitHub" class="icon">
             Voir sur GitHub
           </a>
         </div>
     </div>
-    <div class="project">
-      <p class="project-title">Station météo</p>
-      <div class="media">
-        <img src="images/station_meteo.png" alt="Aperçu du projet station météo" />
-      </div>
-      <div class="project-content">
-        <p class="project-description">
-          TODO
-        </p>
-        <a class="button button-blue" href="https://github.com/Zakurama/station_meteo/tree/projet_commun" target="_blank">
-          <img src="images/logo_github.png" alt="logo GitHub" class="icon">
-          Voir sur GitHub
-        </a>
-      </div>
-  </div>
+        </details>
+        
       </div>
       <div class="formation">
         <div class="formation-content">
