--- a/index.html
+++ b/index.html
@@ -199,6 +199,25 @@
           </a>
         </div>
     </div>
+    <div class="project">
+      <p class="project-title">Projet Orion : Conception et réalisation d'une montre connectée</p>
+      <div class="media">
+        <img src="images/projet_Orion.png" alt="Aperçu du projet Orion" />
+      </div>
+      <div class="project-content">
+        <p class="project-description">
+          TODO
+        </p>
+        <a class="button button-blue" download href="documents/Orion_Rapport_Projet.pdf" target="_blank">
+          <img src="images/logo_pdf.png" alt="logo document pdf" class="icon">
+          Lire le rapport
+        </a>
+        <a class="button button-blue" href="https://github.com/MGuckert/OrionProject" target="_blank">
+          <img src="images/logo_github.png" alt="logo GitHub" class="icon">
+          Voir sur GitHub
+        </a>
+      </div>
+  </div>
         </details>
         
       </div>
