--- a/index.html
+++ b/index.html
@@ -218,6 +218,17 @@
         </a>
       </div>
   </div>
+  <div class="project">
+    <p class="project-title">Conception et réalisation d'un halbike</p>
+    <div class="media">
+      <img src="images/halbike.png" alt="Aperçu de la conception de l'halfbike" />
+    </div>
+    <div class="project-content">
+      <p class="project-description">
+        TODO
+      </p>
+    </div>
+</div>
         </details>
         
       </div>
