--- a/index.html
+++ b/index.html
@@ -249,6 +249,8 @@
         <img src="images\logo_doshisha.png" alt="Logo Doshisha University" />
       </div>
         </div>
+        <details>
+          <summary>Projet réalisé</summary>
         <div class="project">
             <p class="project-title">Comment utiliser l'IA pour analyser des tableaux ?</p>
             <div class="media">
@@ -268,6 +270,7 @@
               </a>
             </div>
         </div>
+        </details>
       </div>
     </section>
 
