style et formation

--- a/index.html
+++ b/index.html
@@ -130,6 +130,75 @@
 
     <section>
       <h2>Expériences Professionnelles</h2>
+
+      <div class="experience_pro">
+        <div class="experience_pro-content">
+          <div class="experience_pro-text">
+            <p class="experience_pro-date">Avril 2025 - Septembre 2025</p>
+            <div class="experience_pro-title-row">
+                <p class="experience_pro-title">CLS</p>
+                <span class="experience_pro-location">&nbsp| Villeneuve-d'Ascq, France</span>
+              </div>
+            <p class="experience_pro-detail">Stage fin d'étude - Ingénieur Deep Learning</p>
+          </div>
+          <div class="experience_pro-image">
+            <img src="images/CLS-Logo.png" alt="Logo CLS" />
+          </div>
+        </div>
+        <details>
+          <summary>Détails</summary>
+
+          <p class="experience_pro-description">
+            TODO
+          </p>
+        </details>
+      </div>
+
+      <div class="experience_pro">
+        <div class="experience_pro-content">
+          <div class="experience_pro-text">
+            <p class="experience_pro-date">Avril 2024 - Août 2024</p>
+            <div class="experience_pro-title-row">
+                <p class="experience_pro-title">Worldline</p>
+                <span class="experience_pro-location">&nbsp| Seclin, France</span>
+              </div>
+            <p class="experience_pro-detail">Stage Master - Ingénieur Generative AI</p>
+          </div>
+          <div class="experience_pro-image">
+            <img src="images/logo_Worldline.png" alt="Logo Worldline" />
+          </div>
+        </div>
+        <details>
+          <summary>Détails</summary>
+
+          <p class="experience_pro-description">
+            TODO
+          </p>
+        </details>
+      </div>
+
+      <div class="experience_pro">
+        <div class="experience_pro-content">
+          <div class="experience_pro-text">
+            <p class="experience_pro-date">Octobre 2023 - Mars 2024</p>
+            <div class="experience_pro-title-row">
+                <p class="experience_pro-title">Laboratoire Inria-Defrost</p>
+                <span class="experience_pro-location">&nbsp| Villeneuve-d’Ascq, France</span>
+              </div>
+            <p class="experience_pro-detail">Stage Master - Ingénieur Robotique & Computer Vision</p>
+          </div>
+          <div class="experience_pro-image">
+            <img src="images/Inr_logo_rouge.svg.png" alt="Logo Inria" />
+          </div>
+        </div>
+        <details>
+          <summary>Détails</summary>
+
+          <p class="experience_pro-description">
+            TODO
+          </p>
+        </details>
+      </div>
     </section>
 
     <section>
@@ -143,16 +212,20 @@
                 <span class="formation-location">&nbsp| Villeneuve-d'Ascq, France</span>
               </div>
             <p class="formation-detail">Ecole d'ingénieur généraliste - Spécialisation en systèmes embarqués</p>
-            <p class="formation-description">
-              TODO (faire une liste ?)
-            </p>
           </div>
           <div class="formation-image">
             <img src="images\logo_CL.png" alt="Logo Centrale Lille" />
           </div>
         </div>
         <details>
-          <summary>Projets réalisés</summary>
+          <summary>Détails</summary>
+
+          <p class="formation-description">
+            TODO (faire une liste ?)
+          </p>
+
+          Projets réalisés : 
+
           <div class="project">
             <p class="project-title">Dart'O'Matic : Système de gestion automatique d'une partie de fléchette</p>
             <div class="media">
@@ -241,16 +314,20 @@
                 <span class="formation-location">&nbsp| Kyoto, Japan</span>
               </div>
             <p class="formation-detail">Semestre à l'international</p>
-            <p class="formation-description">
-              TODO
-            </p>
       </div>
       <div class="formation-image">
         <img src="images\logo_doshisha.png" alt="Logo Doshisha University" />
       </div>
         </div>
         <details>
-          <summary>Projet réalisé</summary>
+          <summary>Détails</summary>
+
+          <p class="formation-description">
+            TODO
+          </p>
+
+          Projet : 
+
         <div class="project">
             <p class="project-title">Comment utiliser l'IA pour analyser des tableaux ?</p>
             <div class="media">
