--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <header>
-      <img src="images/photo_cv.jpg" alt="Photo de profil" class="profile-img"/>
+      <img src="images/photo_cv.png" alt="Photo de profil" class="profile-img"/>
       <h1>Thibaud Piccinali</h1>
       <p>Étudiant en ingénierie - Passionné par l’automatique, l’embarqué et le développement</p>
       <a href="documents/CV_Thibaud_PICCINALI.pdf" download class="button button-dark_blue">
