some responsive stuff. WIP

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       <a class="button button-dark_blue" onclick="copyToClipboard('thibaud.piccinali@centrale.centralelille.fr', this);">
         <i class="fas fa-envelope fa-sm"></i>
         thibaud.piccinali@centrale.centralelille.fr
-        <span class="tooltip">Copié dans le presse papier!</span>
+        <span class="tooltip">Copié dans le presse papier !</span>
       </a>
 
       <a class="button button-dark_blue" onclick="copyToClipboard('+33 7 68 13 17 92', this);">
         <i class="fas fa-phone fa-sm"></i>
         +33 7 68 13 17 92
-        <span class="tooltip">Copié dans le presse papier!</span>
+        <span class="tooltip">Copié dans le presse papier !</span>
       </a>
 
     </div>
@@ -178,8 +178,7 @@
           <div class="experience_pro-text">
             <p class="experience_pro-date">Avril 2025 - Septembre 2025</p>
             <div class="experience_pro-title-row">
-                <p class="experience_pro-title">CLS</p>
-                <span class="experience_pro-location">&nbsp| Villeneuve-d'Ascq, France</span>
+                <p class="experience_pro-title">CLS | Villeneuve-d'Ascq, France</p>
               </div>
             <p class="experience_pro-detail">Stage fin d'étude - Ingénieur Deep Learning</p>
           </div>
@@ -201,8 +200,7 @@
           <div class="experience_pro-text">
             <p class="experience_pro-date">Avril 2024 - Août 2024</p>
             <div class="experience_pro-title-row">
-                <p class="experience_pro-title">Worldline</p>
-                <span class="experience_pro-location">&nbsp| Seclin, France</span>
+                <p class="experience_pro-title">Worldline | Seclin, France</p>
               </div>
             <p class="experience_pro-detail">Stage Master - Ingénieur Generative AI</p>
           </div>
@@ -224,8 +222,7 @@
           <div class="experience_pro-text">
             <p class="experience_pro-date">Octobre 2023 - Mars 2024</p>
             <div class="experience_pro-title-row">
-                <p class="experience_pro-title">Laboratoire Inria-Defrost</p>
-                <span class="experience_pro-location">&nbsp| Villeneuve-d’Ascq, France</span>
+                <p class="experience_pro-title">Laboratoire Inria-Defrost | Villeneuve-d’Ascq, France</p>
               </div>
             <p class="experience_pro-detail">Stage Master - Ingénieur Robotique & Computer Vision</p>
           </div>
@@ -250,8 +247,7 @@
           <div class="formation-text">
             <p class="formation-date">2021 - 2025</p>
             <div class="formation-title-row">
-                <p class="formation-title">Ecole Centrale de Lille</p>
-                <span class="formation-location">&nbsp| Villeneuve-d'Ascq, France</span>
+                <p class="formation-title">Ecole Centrale de Lille | Villeneuve-d'Ascq, France</p>
               </div>
             <p class="formation-detail">Ecole d'ingénieur généraliste - Spécialisation en systèmes embarqués</p>
           </div>
@@ -277,14 +273,16 @@
               <p class="project-description">
                 TODO
               </p>
-              <a class="button button-blue" download href="documents/Rapport_DartOmatic.pdf" target="_blank">
-                <i class="fas fa-file-pdf fa-sm"></i>
-                Lire le rapport
-              </a>
-              <a class="button button-blue" href="https://github.com/ThibaudPiccinali/Dart-O-Matic" target="_blank">
-                <i class="fab fa-github fa-sm"></i>
-                Voir sur GitHub
-              </a>
+              <div class="button-container">
+                <a class="button button-blue" download href="documents/Rapport_DartOmatic.pdf" target="_blank">
+                  <i class="fas fa-file-pdf fa-sm"></i>
+                  Lire le rapport
+                </a>
+                <a class="button button-blue" href="https://github.com/ThibaudPiccinali/Dart-O-Matic" target="_blank">
+                  <i class="fab fa-github fa-sm"></i>
+                  Voir sur GitHub
+                </a>
+              </div>
             </div>
         </div>
         <div class="project">
@@ -293,10 +291,12 @@
             <p class="project-description">
               TODO
             </p>
-            <a class="button button-blue" href="https://github.com/Zakurama/projet_entrepot" target="_blank">
-              <i class="fab fa-github fa-sm"></i>
-              Voir sur GitHub
-            </a>
+            <div class="button-container">
+              <a class="button button-blue" href="https://github.com/Zakurama/projet_entrepot" target="_blank">
+                <i class="fab fa-github fa-sm"></i>
+                Voir sur GitHub
+              </a>
+            </div>
           </div>
       </div>
       <div class="project">
@@ -308,10 +308,12 @@
           <p class="project-description">
             TODO
           </p>
-          <a class="button button-blue" href="https://github.com/Zakurama/station_meteo/tree/projet_commun" target="_blank">
-            <i class="fab fa-github fa-sm"></i>
-            Voir sur GitHub
-          </a>
+          <div class="button-container">
+            <a class="button button-blue" href="https://github.com/Zakurama/station_meteo/tree/projet_commun" target="_blank">
+              <i class="fab fa-github fa-sm"></i>
+              Voir sur GitHub
+            </a>
+          </div>
         </div>
     </div>
     <div class="project">
@@ -323,14 +325,16 @@
         <p class="project-description">
           TODO
         </p>
-        <a class="button button-blue" download href="documents/Orion_Rapport_Projet.pdf" target="_blank">
-          <i class="fas fa-file-pdf fa-sm"></i>
-          Lire le rapport
-        </a>
-        <a class="button button-blue" href="https://github.com/MGuckert/OrionProject" target="_blank">
-          <i class="fab fa-github fa-sm"></i>
-          Voir sur GitHub
-        </a>
+        <div class="button-container">
+          <a class="button button-blue" download href="documents/Orion_Rapport_Projet.pdf" target="_blank">
+            <i class="fas fa-file-pdf fa-sm"></i>
+            Lire le rapport
+          </a>
+          <a class="button button-blue" href="https://github.com/MGuckert/OrionProject" target="_blank">
+            <i class="fab fa-github fa-sm"></i>
+            Voir sur GitHub
+          </a>
+        </div>
       </div>
   </div>
   <div class="project">
@@ -352,8 +356,7 @@
           <div class="formation-text">
             <p class="formation-date">Mars 2023 - Août 2023</p>
             <div class="formation-title-row">
-                <p class="formation-title">Doshisha University</p>
-                <span class="formation-location">&nbsp| Kyoto, Japan</span>
+                <p class="formation-title">Doshisha University | Kyoto, Japan</p>
               </div>
             <p class="formation-detail">Semestre à l'international</p>
       </div>
@@ -379,14 +382,16 @@
               <p class="project-description">
                 TODO
               </p>
-              <a class="button button-blue" download href="documents/Report_Analyse_Art_AI.pdf" target="_blank">
-                <i class="fas fa-file-pdf fa-sm"></i>
-                Lire le rapport
-              </a>
-              <a class="button button-blue" href="https://github.com/ThibaudPiccinali/Machine_Learning_Object_Detection" target="_blank">
-                <i class="fab fa-github fa-sm"></i>
-                Voir sur GitHub
-              </a>
+              <div class="button-container">
+                <a class="button button-blue" download href="documents/Report_Analyse_Art_AI.pdf" target="_blank">
+                  <i class="fas fa-file-pdf fa-sm"></i>
+                  Lire le rapport
+                </a>
+                <a class="button button-blue" href="https://github.com/ThibaudPiccinali/Machine_Learning_Object_Detection" target="_blank">
+                  <i class="fab fa-github fa-sm"></i>
+                  Voir sur GitHub
+                </a>
+              </div>
             </div>
         </div>
         </details>
