langues nouveau format

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src="main.js" defer></script>
-  <script src="https://cdn.jsdelivr.net/npm/progressbar.js"></script>
 
 </head>
 <body>
@@ -146,9 +145,36 @@
 
     <section>
         <h2>Langues</h2>
-        <div class="langue-container">
-
-      </div>
+        <div class="language-grid">
+          <div class="language-card">
+            <img src="images/Flag_of_France.svg.png" alt="Français">
+            <div class="language-text">
+              <h3>Français</h3>
+              <p>Langue maternelle</p>
+            </div>
+          </div>
+          <div class="language-card">
+            <img src="images/Flag_of_the_United_Kingdom_(3-5).svg.png" alt="Anglais">
+            <div class="language-text">
+              <h3>Anglais</h3>
+              <p>Courant (C1), TOEIC 965</p>
+            </div>
+          </div>
+          <div class="language-card">
+            <img src="images/Flag_of_Japan.svg.png" alt="Japonais">
+            <div class="language-text">
+              <h3>Japonais</h3>
+              <p>Débutant (fin A2), cours universitaires</p>
+            </div>
+          </div>
+          <div class="language-card">
+            <img src="images/Flag_of_Spain.svg.png" alt="Espagnol">
+            <div class="language-text">
+              <h3>Espagnol</h3>
+              <p>Niveau intermédiaire (B1)</p>
+            </div>
+          </div>
+        </div>
       </section>
 
     <section>
