--- a/index.html
+++ b/index.html
@@ -70,10 +70,6 @@
                 <span>CSS</span>
               </div>
               <div class="skill-item">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript" />
-                <span>JavaScript</span>
-              </div>
-              <div class="skill-item">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git" />
                 <span>Git</span>
               </div>
@@ -89,12 +85,39 @@
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/matlab/matlab-original.svg" alt="MATLAB" />
                 <span>MATLAB</span>
               </div>
+              <div class="skill-item">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/raspberrypi/raspberrypi-original.svg" alt="Raspberrypi" />
+                <span>Raspberry Pi</span>
+              </div>
+              <div class="skill-item">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/arduino/arduino-original.svg" alt="Arduino" />
+                <span>Arduino</span>
+              </div>
+              <div class="skill-item">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/androidstudio/androidstudio-original.svg" alt="Android Studio" />
+                <span>Android Studio</span>
+              </div>
+              <div class="skill-item">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/opencv/opencv-original.svg" alt="OpenCV" />
+                <span>OpenCV</span>
+              </div>
+              <div class="skill-item">
+                <img src="images/onshape.png" alt="Onshape" />
+                <span>Onshape</span>
+              </div>
+              <div class="skill-item">
+                <img src="images/kicad.png" alt="KiCad" />
+                <span>KiCad</span>
+              </div>
+              <div class="skill-item">
+                <img src="images/pytorchL.png" alt="PytorchLightning" />
+                <span>Pytorch Lightning</span>
+              </div>
               <!-- Il faut dupliquer les items ici-->
               <div class="skill-item">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg" alt="C" />
                 <span>C</span>
               </div>
-  
               <div class="skill-item">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" alt="C++" />
                 <span>C++</span>
@@ -112,10 +135,6 @@
                 <span>CSS</span>
               </div>
               <div class="skill-item">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript" />
-                <span>JavaScript</span>
-              </div>
-              <div class="skill-item">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git" />
                 <span>Git</span>
               </div>
@@ -130,6 +149,34 @@
               <div class="skill-item">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/matlab/matlab-original.svg" alt="MATLAB" />
                 <span>MATLAB</span>
+              </div>
+              <div class="skill-item">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/raspberrypi/raspberrypi-original.svg" alt="Raspberrypi" />
+                <span>Raspberry Pi</span>
+              </div>
+              <div class="skill-item">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/arduino/arduino-original.svg" alt="Arduino" />
+                <span>Arduino</span>
+              </div>
+              <div class="skill-item">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/androidstudio/androidstudio-original.svg" alt="Android Studio" />
+                <span>Android Studio</span>
+              </div>
+              <div class="skill-item">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/opencv/opencv-original.svg" alt="OpenCV" />
+                <span>OpenCV</span>
+              </div>
+              <div class="skill-item">
+                <img src="images/onshape.png" alt="Onshape" />
+                <span>Onshape</span>
+              </div>
+              <div class="skill-item">
+                <img src="images/kicad.png" alt="KiCad" />
+                <span>KiCad</span>
+              </div>
+              <div class="skill-item">
+                <img src="images/pytorchL.png" alt="PytorchLightning" />
+                <span>Pytorch Lightning</span>
               </div>
   
             </div>
@@ -157,7 +204,7 @@
             <img src="images/Flag_of_the_United_Kingdom_(3-5).svg.png" alt="Anglais">
             <div class="language-text">
               <h3>Anglais</h3>
-              <p>Courant (C1), TOEIC 965</p>
+              <p>Courant (C1), TOEIC 955</p>
             </div>
           </div>
           <div class="language-card">
