--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="main.js" defer></script>
 
 </head>
-<body>
+<body id="top">
   <div class="container">
     <header>
       <img src="images/photo_cv.png" alt="Photo de profil" class="profile-img"/>
@@ -185,7 +185,7 @@
     </header>
 
     <section>
-      <h2>Compétences</h2>
+      <h2>Qualités</h2>
       C/C++, Python, HTML/CSS, JavaScript, Raspberry Pi, Arduino, Linux, Git, Matlab/Simulink, KiCad, Onshape, Visual Studio Code, Android Studio, Pytorch Lightning, OpenCV, Deep Learning, LLM, Gestion de projet, Gestion des risques
     
     </section>
@@ -454,4 +454,10 @@
 
   </div>
 </body>
+<footer>
+  Dernière mise à jour majeure de ce site : Juin 2025.
+  <div class="footer-links">
+      <a href="#top">Haut de page</a>
+    </div>
+</footer>
 </html>
