--- a/index.html
+++ b/index.html
@@ -455,9 +455,12 @@
   </div>
 </body>
 <footer>
-  Dernière mise à jour majeure de ce site : Juin 2025.
-  <div class="footer-links">
-      <a href="#top">Haut de page</a>
-    </div>
+  <div class="footer-content">
+      Dernière mise à jour majeure de ce site : 
+      <p>Juin 2025</p>
+    <div class="footer-links">
+        <a href="#top">Haut de page</a>
+      </div>
+  </div>
 </footer>
 </html>
