--- a/index.html
+++ b/index.html
@@ -185,12 +185,6 @@
     </header>
 
     <section>
-      <h2>Qualités</h2>
-      C/C++, Python, HTML/CSS, JavaScript, Raspberry Pi, Arduino, Linux, Git, Matlab/Simulink, KiCad, Onshape, Visual Studio Code, Android Studio, Pytorch Lightning, OpenCV, Deep Learning, LLM, Gestion de projet, Gestion des risques
-    
-    </section>
-
-    <section>
         <h2>Langues</h2>
         <div class="language-grid">
           <div class="language-card">
@@ -459,7 +453,7 @@
       Dernière mise à jour majeure de ce site : 
       <p>Juin 2025</p>
     <div class="footer-links">
-        <a href="#top">Haut de page</a>
+        <a href="#top">Haut de la page</a>
       </div>
   </div>
 </footer>
